# rust_programming

./: Cargo.toml  lib
Greeter/: Cargo.toml
Greeter/src/: main.rs
Queue Threading/: simple_queue.rs  temp_channeling  temp_channeling.rs  threading_impl.rs
hello_macro/: Cargo.toml
hello_macro_derive/: Cargo.toml
hello_macro_derive/src/: lib.rs
phrases/: Cargo.toml
phrases/src/: greetings.rs  lib.rs  main.rs
poa/: Cargo.toml  README.md  consensus.rs
poa/keypair/: keypair.rs
poa/src/: lib.rs  mod.rs  transaction.rs
poa/src/transaction/: keypair.rs
src/: main.rs
src/greetings/: Cargo.toml
src/greetings/src/: lib.rs  main.rs
src/procedural_macros/: Cargo.toml  rules.txt
src/procedural_macros/src/: macro_def.rs  main.rs  mod.rs  procedural_marco.rs
src/restaurant/front_of_house/: hosting.rs  serving.rs
